<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:orientation="vertical"
    tools:context=".activity.CreateActivity">



    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="Idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtIdade"
        android:digits="0123456789"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/data_de_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNascimento"
        android:hint="dd/mm/ano"
        android:digits=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnInserir"
            android:text="@string/cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnDeletar"
            android:text="@string/remover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btnAlterar"
            android:text="@string/alterar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>