<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.DeleteActivity">


    <TextView
        android:text="@string/nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/remNome"
        android:layout_width="match_parent"
        android:enabled="false"
        android:layout_height="wrap_content" />
    <TextView
        android:text="Idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/remIdade"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:text="@string/data_de_nascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/remNascimento"
        android:enabled="false"
        android:hint="dd/mm/ano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRemover"
        android:text="@string/remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>